tdf#106692 writerfilter: RTF import: fix \'0d in \leveltext

It's not a newline but yet another one of those bizarre RTF-encodings.

(regression from 10e733908038407791f9c14af2a86417cc4a653c)

Change-Id: I568050b031b95ac0b6ebfa1a0c39107e62f68bed